--- a/wp-content/themes/mitm/assets/sass/global/_footer.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_footer.scss
@@ -38,6 +38,9 @@
             float: none;
             line-height: 28px;
             margin: 20px 0 0;
+           @media (max-width: $screen-phone) {
+                 margin: 50px 0 5px;
+            }
         }
         .social-links {
             margin: 0 auto;
