--- a/wp-content/themes/mitm/assets/sass/global/_header.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_header.scss
@@ -202,7 +202,6 @@
         @media (max-width: $screen-phone) {
             display: block;
             margin: 22px 80px 0 0;
-
         }
     }
     .header-section {
@@ -219,7 +218,7 @@
                 font-size: 0;
             }
             @media (max-width: $screen-phone) {
-                margin:10px 0 10px 90px;
+                margin: 10px 0 10px 90px;
                 a {
                     @include bg-img(logo-s, png);
                     @include size(63px, 65px);
@@ -227,18 +226,21 @@
             }
         }
         .mob-page-info {
-    border-bottom: 4px solid;
-    display: inline-block;
-    margin: 33px 16px 0;
-    text-transform: uppercase;
-    @extend %text-center;
-    @include font-shorthand(12px, 400, 14px);
-    @extend %Raleway;
-    .current-page {
+            border-bottom: 4px solid;
+            display:none;
+            margin: 33px 16px 0;
+            text-transform: uppercase;
+            @extend %text-center;
+            @include font-shorthand(12px, 400, 14px);
+            @extend %Raleway;
+            .current-page {
                 display: block;
                 margin-bottom: 1px;
             }
-}
+            @media (max-width: $screen-phone) {
+                display: inline-block;
+            }
+        }
         // Main Navigation
         .main-navigation {
             padding: 0;
