--- a/wp-content/themes/mitm/assets/sass/global/_variables.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_variables.scss
@@ -37,6 +37,7 @@ $BgColor: 	#2b292a;
 $BgColor2: 	#808080;
 $BgColor3: 	#f5f5f5;
 $BgColor4:	#DADBDC;
+$BgColor5:	#2a2829;
 
 
 $BdColor:	#c7c7c7;
@@ -50,7 +51,7 @@ $BdColor6:	#d0d0d0;
 
 
 $text-color: $Gray;
-$text-color2: #333;
+$text-color2: #333333;
 $text-color3: #555555;
 $text-color4: #B3B3B3;
 $text-color5: #999999;
