--- a/wp-content/themes/mitm/assets/sass/pages/_home.scss
+++ b/wp-content/themes/mitm/assets/sass/pages/_home.scss
@@ -6,8 +6,8 @@
         overflow: hidden;
     }
     .owl-carousel {
-        max-width: 750px;
-        margin: 0px auto;
+        //max-width: 750px;
+        //margin: 0px auto;
         .title {
             color: $White;
             background-color: $Gray;
