fix logo size for mobile

--- a/wp-content/themes/mitm/assets/sass/pages/_home.scss
+++ b/wp-content/themes/mitm/assets/sass/pages/_home.scss
@@ -323,6 +323,7 @@
         margin: 200px auto 0 auto;
         @media (max-width: $screen-xs-max) {
             @include size(162px, 177px);
+            margin-top: 50px;
         }
     }
     #go_btn {
